@@ -30,8 +30,6 @@ dependencies {
     serverRuntime project(':codion-plugin-hikari-pool')
     serverRuntime project(':codion-plugin-logback-proxy')
 
-//    runtimeOnly 'net.sourceforge.pro-grade:pro-grade:1.1.2-SNAPSHOT'
-
     serverRuntime project(path: ':codion-demos-empdept', configuration: 'domain')
     serverRuntime project(path: ':codion-demos-chinook', configuration: 'domain')
     serverRuntime project(path: ':codion-demos-petclinic', configuration: 'domain')
@@ -94,26 +92,14 @@ applicationDefaultJvmArgs = [
         '--add-modules', 'is.codion.plugin.jasperreports,codion.demos.chinook.domain,codion.demos.world.domain',
         '--add-reads', 'is.codion.framework.domain=codion.demos.chinook.domain,codion.demos.world.domain',
         '-Dcodion.configurationFile=../config/h2_embedded.config',
-        '-Dlogback.configurationFile=../config/logback.xml',
-        '-Djava.security.policy=../config/codion_server.policy'
-]
-
-def applicationGenerateSecurityPolicyJvmArgs = [
-        '-Xmx256m',
-        '--add-modules', 'is.codion.plugin.jasperreports,codion.demos.chinook.domain,codion.demos.world.domain',
-        '--add-reads', 'is.codion.framework.domain=codion.demos.chinook.domain,codion.demos.world.domain',
-        '-Dcodion.configurationFile=../config/h2_embedded.config',
-        '-Dlogback.configurationFile=../config/logback.xml',
-        '-Djava.security.manager=net.sourceforge.prograde.sm.PolicyFileGeneratorJSM',
-        '-Djava.security.policy=../config/default.policy',
-        '-Dprograde.generated.policy=../config/generated.policy'
+        '-Dlogback.configurationFile=../config/logback.xml'
 ]
 
 task runServer(type: ModularJavaExec, dependsOn: createServerKeystore) {
     group 'application'
     classpath = configurations.serverRuntime
-    mainClass = mainClassName
-    mainModule = moduleName
+    mainClass.set(mainClassName)
+    mainModule.set(moduleName)
     maxHeapSize = '256m'
     jvmArgs = [
             //using the automatic module name, since domain jars do not contain module-info
@@ -135,7 +121,6 @@ task runServer(type: ModularJavaExec, dependsOn: createServerKeystore) {
             'javax.net.ssl.keyStore'                    : 'src/main/config/keystore.jks',
             'javax.net.ssl.keyStorePassword'            : 'crappypass',
             'java.rmi.server.hostname'                  : "${serverHostName}",
-            'logback.configurationFile'                 : 'src/main/config/logback.xml',
-            'java.security.policy'                      : 'src/main/config/codion_server.policy'
+            'logback.configurationFile'                 : 'src/main/config/logback.xml'
     ]
 }
